// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return mesures of user type individuel 1`] = `
Array [
  Object {
    "code_postal": "62000",
    "count": "1",
    "latitude": 50.5333,
    "longitude": 2.6333,
    "mandataire_ids": Array [
      1,
    ],
    "types": Array [
      "individuel",
    ],
  },
  Object {
    "code_postal": "93000",
    "count": "1",
    "latitude": 48.91,
    "longitude": 2.41998,
    "mandataire_ids": Array [
      1,
    ],
    "types": Array [
      "individuel",
    ],
  },
]
`;

exports[`should return mesures of user type prepose 1`] = `
Array [
  Object {
    "code_postal": "75000",
    "count": "1",
    "latitude": 48.8534,
    "longitude": 2.3488,
    "mandataire_ids": Array [
      2,
    ],
    "types": Array [
      "prepose",
    ],
  },
]
`;
